// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrow snapshot down 1`] = `
<path
  className="className"
  d="m 0,0 8,-5 0,10 -8,-5"
  transform="translate(0, 8) rotate(270)"
/>
`;

exports[`Arrow snapshot left 1`] = `
<path
  className="className"
  d="m 0,0 8,-5 0,10 -8,-5"
  transform="translate(-8, 0) rotate(0)"
/>
`;

exports[`Arrow snapshot right 1`] = `
<path
  className="className"
  d="m 0,0 8,-5 0,10 -8,-5"
  transform="translate(8, 0) rotate(180)"
/>
`;

exports[`Arrow snapshot up 1`] = `
<path
  className="className"
  d="m 0,0 8,-5 0,10 -8,-5"
  transform="translate(0, -8) rotate(90)"
/>
`;
